--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 click==6.7
 dnspython==1.15.0
-eventlet==0.24.1
+gevent==1.2.2
+gevent-socketio==0.3.6
+gevent-websocket==0.10.1
 Flask==1.0.2
 Flask-SocketIO==3.0.1
 greenlet==0.4.14
