--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dnspython==1.15.0
 eventlet==0.24.1
 Flask==1.0.2
 Flask-SocketIO==3.0.1
+greenlet==0.4.14
 gunicorn==19.9.0
 itsdangerous==0.24
 Jinja2==2.10
