--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 click==6.7
 dnspython==1.15.0
-eventlet==0.24.1
 Flask==1.0.2
 Flask-SocketIO==3.0.1
 greenlet==0.4.14
@@ -13,3 +12,5 @@ python-engineio==2.2.0
 python-socketio==2.0.0
 six==1.11.0
 Werkzeug==0.14.1
+gevent
+gevent-websocket
