--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ click==6.7
 dnspython==1.15.0
 eventlet==0.24.1
 Flask==1.0.2
+flask-heroku==0.1.9
 Flask-SocketIO==3.0.1
 greenlet==0.4.14
 gunicorn==19.9.0
